<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">NCTS Krokomer</string>
    <string name="about">O aplikácii</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Užívateľ</item>
        <item >Prehľad</item>
        <item >História chôdze</item>
        <item >Graf chôdze</item>
        <item >Kvalita spánku</item>
        <item >Graf spánku</item>
        <item >Odhlásenie</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_user</item>
        <item>@drawable/ic_sumarization</item>
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_graph_walk</item>
        <item>@drawable/ic_quality_of_sleep</item>
        <item>@drawable/ic_graph_of_sleep</item>
        <item>@drawable/ic_logout</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="fotka_uzivatela">Fotka užívateľa</string>
    <string name="login_name">Meno:</string>
    <string name="gender">Pohlavie:</string>
    <string name="height">Výška:</string>
    <string name="weight">Váha:</string>
    <string name="label_steps">Kroky</string>
    <string name="label_distance">Vzdialenosť</string>
    <string name="label_calories">Kalórie</string>
    <string name="step_icon">Step Icon</string>
    <string name="summary_steps_label">krokov</string>
    <string name="summary_distance_label">kilometrov</string>
    <string name="summary_calories_label">kcal</string>
    <string name="sync_label">Sync</string>
    
    
    <string name="summary_text_changed">Prehľad bol aktualizovaný</string>
    <string name="toast_profil_updated">Profil bol aktualizovaný</string>
    <string name="list_of_items_updated">Zoznam bol aktualizovaný</string>
    <string name="sleep_efficiency_label">Kvalita spánku:</string>
    <string name="hours_slept_label">Spánok:</string>
    <string name="sleep_fell_sleep_label">Zaspal za:</string>
    <string name="tv_sleep_awaken">Počet zobudení:</string>
 
</resources>